Refactor YamlSchemaValidator to improve error handling, enhance logging, and introduce YAML validation exceptions; add comprehensive test cases and new resource files for validation.